--- a/index.html
+++ b/index.html
@@ -1,7 +1,65 @@
 <!DOCTYPE html>
 <html>
+<head>
+	<title>Home Page - thinkingape46</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width initial-scale=1"> <!-- Web browser window area, the part of the browser that scrolls with the webpage [] -->
+	<link rel="stylesheet" href="css/thinkingape46.css">
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+	
+<header>
+	<div class="container">
+		<h1>Welcome to the Website written by a friendly average guy</h1>
+		<p class="slogan">This site will be frequently updated with new content, as of now, I just have some filler text.</p>
+	<nav class="site-nav">
+	<ul class="group">
+		<li class="size-scale"><a href="home page.html">Home Page</a></li>
+		<li class="size-scale"><a href="#">Portfolio</a></li>
+		<li class="size-scale"><a href="#">Travel Diary</a></li>
+		<li class="size-scale"><a href="#">Science Blog</a></li>
+		<li class="size-scale"><a href="miscellaneous.html">Miscellaneous</a></li>
+		<li class="size-scale"><a href="#">Contact Me</a></li>
+	</ul>
+	</nav>
+	</div>
+	<div class="container">
+	<nav class="sprites_menu">
+	<ul class="group">
+		<li class="sprites_home"><a href="#">Home</a></li>
+		<li class="sprites_profile"><a href="#">Profile</a></li>
+		<li class="sprites_settings"><a href="#">Settings</a></li>
+	</ul>
+	</nav>
+	</div>
+</header>
+	<div class="content-area group">
+	<div class="container">
+		<div class="para1">
+				<p>
+				It was <span class="timeoftheday"> 5:30</span> in the evening and the <b>sun</b> has set already set on the horizon, England is about 50° above the equator and experiences a temperate climate, it's common to see sunsets at early as 04:30 PM in the winter and as late as 10:30 PM in the summer. As I continue along the trail, I get a glimpse of a building, felt like close to civilization but it is only a factory&#59; on the walls are warning notices reading “ASBESTOS IS INJURIOUS TO HEALTH”. Asbestos used to be quite common back in my days of kindergarten when school roofs are made of grey asbestos and when it rained they used to turn green and slippery. Fortunately, the negative effects of asbestos are well known and now banned over 60 countries. Around 6:30 PM, around Middleton, a light flashed out of nowhere from a person almost 500 m ahead of me, it is not steady but oscillated a lot something that doesn’t happen when you hold it in our hands, the stranger ahead should be solo walker like me. With no intention of making a contact, I followed the light for 10 minutes and surprised to find that; the source of the light is a toddler shoe walking alongside his mother, they walk for few hundred metres and take a road to the left and disappear. I was not really sure why they are staying this late, either they live in a nearby village or have parked a car nearby.
+				</p>
+			<div class="image-banner">
+				<img src="images/The high peak trail.jpg">
+				<div class="banner-description">
+					<p>A gravel road in the area surrounding Buxon, the trail is on the left about 100 m from here</p>
+				</div>
+				
+			</div>
+		
+				<p>
+				It was <span class="timeoftheday"> 5:30</span> in the evening and the sun has set already set on the horizon, England is about 50° above the equator and experiences a temperate climate, it's common to see sunsets at early as 04:30 PM in the winter and as late as 10:30 PM in the summer. As I continue along the trail, I get a glimpse of a building, felt like close to civilization but it is only a factory&#59; on the walls are warning notices reading “ASBESTOS IS INJURIOUS TO HEALTH”. Asbestos used to be quite common back in my days of kindergarten when school roofs are made of grey asbestos and when it rained they used to turn green and slippery. Fortunately, the negative effects of asbestos are well known and now banned over 60 countries. Around 6:30 PM, around Middleton, a light flashed out of nowhere from a person almost 500 m ahead of me, it is not steady but oscillated a lot something that doesn’t happen when you hold it in our hands, the stranger ahead should be solo walker like me. With no intention of making a contact, I followed the light for 10 minutes and surprised to find that; the source of the light is a toddler shoe walking alongside his mother, they walk for few hundred metres and take a road to the left and disappear. I was not really sure why they are staying this late, either they live in a nearby village or have parked a car nearby.
+				</p>
+			</div>
+			<div class="para2">
+				<p>
+				At 6:30 PM I had at least 4 more km to walk, it's pitch dark now with no lights in the vicinity. The time for the last bus from Cromford to Derby is fast approaching, and with no clue of what's ahead, I ramped the pace to buy some time. After half an hour, I reached a point where the road gets too steep (negative gradient of 12%), the trail is so steep that it takes more effort to walk than to run and I have a Mr. stranger now behind me on a bicycle. Cycling is a famous sport and well-supported through cycling infrastructure such are dedicated lanes, rental services, racks on trains, national cycling network and the company of 2.8 million riders. The government also encourages its citizens to get on a bike aims to make cycling and walking a natural choice for shorter journeys. I started running faster as if I saw him as a threat, it didn't take much time to overtake me and went on his path before uttered a British phrase “You Alright?”, I said, “I’m good, thank you”.
+				</p>
+			</div>
+	</div>	
+	</div>
+	<div class="non-mobile">
+		<p>This content is not for mobile.</p>
+	</div>	
 </body>
 </html>
