--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<p class="slogan">This site will be frequently updated with new content, as of now, I just have some filler text.</p>
 	<nav class="site-nav">
 	<ul class="group">
-		<li class="size-scale"><a href="home page.html">Home Page</a></li>
+		<li class="size-scale"><a href="index.html">Home Page</a></li>
 		<li class="size-scale"><a href="#">Portfolio</a></li>
 		<li class="size-scale"><a href="#">Travel Diary</a></li>
 		<li class="size-scale"><a href="#">Science Blog</a></li>
@@ -59,7 +59,7 @@
 	</div>	
 	</div>
 	<div class="non-mobile">
-		<p>This content is not for mobile.</p>
+		<p>This box is invisible on screen width less than 480 pixels.</p>
 	</div>	
 </body>
 </html>
