--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<li class="size-scale"><a href="#">Travel Diary</a></li>
 		<li class="size-scale"><a href="#">Science Blog</a></li>
 		<li class="size-scale"><a href="miscellaneous.html">Miscellaneous</a></li>
-		<li class="size-scale"><a href="#">About Me</a></li>
+		<li class="size-scale"><a href="aboutme.html">About Me</a></li>
 	</ul>
 	</nav>
 	</div>
