Styling sheets modified.

--- a/miscellaneous.html
+++ b/miscellaneous.html
@@ -1,70 +1,73 @@
 <!DOCTYPE html>
 <html>
-    <div class="container" >
 <head>
     <title>Miscellaneous - thinkingape46</title>
     <meta charset="utf-8">
 	<link rel="stylesheet" href="css/miscellaneous.css">
 </head>
 <body>
-<h1>This is the miscellaneous section</h1>
+<div class="heading">
+        <h1>This is the miscellaneous section</h1>
 <p class="slogan">just random things</p>
 <nav class="site-nav">
 	<ul class="group">
-		<li><a href="index.html">Home Page</a></li>
-		<li><a href="#">Portfolio</a></li>
-		<li><a href="#">Travel Diary</a></li>
-		<li><a href="#">Science Blog</a></li>
-		<li><a href="miscellaneous.html">Miscellaneous</a></li>
-		<li><a href="#">Contact Me</a></li>
-    </ul>
-</nav>
-<div class="para1 group">
-    <p>Here, a little text about Oats which is part of my typical breakfast. Oat is a cereal grain grown for its seeds, the seeds is suitable for both human consumption and as well as for livestock. We Humans usually consume Oats in form of Oats Porridge or Oat milk.</p>
-    <p>Oat meal is considered to be of high nutrional value and has low glycemic index. Below is a nutrional value table of 100 g oat meal cooked with water.</p>
-<table class="oats-nutrition">
-    <thead>
-        <tr>
-            <th class="col1">Macronutrient</th>
-            <th class="col2">Quantity</th>
-            <th class="col3">Unit</th>
-            <th class="col4">%Dv</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td>Carbohydrate</td>
-            <td>12</td>
-            <td>g</td>
-            <td>--</td>
-        </tr>
-        <tr>
-            <td>Sugars</td>
-            <td>0.3</td>
-            <td>g</td>
-            <td>--</td>
-        </tr>
-        <tr>
-            <td>Dietary Value</td>
-            <td>1.7</td>
-            <td>g</td>
-            <td>--</td>
-        </tr>
-        <tr>
-            <td>Fat</td>
-            <td>1.5</td>
-            <td>g</td>
-            <td>--</td>
-        </tr>
-        <tr>
-            <td>Protein</td>
-            <td>2.5</td>
-            <td>g</td>
-            <td>--</td>
-        </tr>
-    </tbody>
-</table>
+		<li class="size-scale"><a href="index.html">Home Page</a></li>
+		<li class="size-scale"><a href="#">Portfolio</a></li>
+		<li class="size-scale"><a href="#">Travel Diary</a></li>
+		<li class="size-scale"><a href="#">Science Blog</a></li>
+		<li class="size-scale"><a href="miscellaneous.html">Miscellaneous</a></li>
+		<li class="size-scale"><a href="aboutme.html">About Me</a></li>
+	</ul>
+	</nav>
 </div>
+<div class="container">
+    <div class="para1 group">
+        <p>Here, a little text about Oats which is part of my typical breakfast. Oat is a cereal grain grown for its seeds, the seeds is suitable for both human consumption and as well as for livestock. We Humans usually consume Oats in form of Oats Porridge or Oat milk.</p>
+        <p>Oat meal is considered to be of high nutrional value and has low glycemic index. Below is a nutrional value table of 100 g oat meal cooked with water.</p>
+    <table class="oats-nutrition">
+        <thead>
+            <tr>
+                <th class="col1">Macronutrient</th>
+                <th class="col2">Quantity</th>
+                <th class="col3">Unit</th>
+                <th class="col4">%Dv</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Carbohydrate</td>
+                <td>12</td>
+                <td>g</td>
+                <td>--</td>
+            </tr>
+            <tr>
+                <td>Sugars</td>
+                <td>0.3</td>
+                <td>g</td>
+                <td>--</td>
+            </tr>
+            <tr>
+                <td>Dietary Value</td>
+                <td>1.7</td>
+                <td>g</td>
+                <td>--</td>
+            </tr>
+            <tr>
+                <td>Fat</td>
+                <td>1.5</td>
+                <td>g</td>
+                <td>--</td>
+            </tr>
+            <tr>
+                <td>Protein</td>
+                <td>2.5</td>
+                <td>g</td>
+                <td>--</td>
+            </tr>
+        </tbody>
+    </table>
+    </div>
+</div>
+
 </body>
-</div>
 </html>
