--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width initial-scale=1"> <!-- Web browser window area, the part of the browser that scrolls with the webpage [] -->
 	<link rel="stylesheet" href="css/thinkingape46.css">
+	<meta name="google-site-verification" content="hHcgob94hTfKzDqe_BTHVgxOSfAOJ9TVq0DSFCgbygQ" />
 </head>
 <body>
 	
