Updates to home page.

--- a/index.html
+++ b/index.html
@@ -31,14 +31,24 @@
 				<p>
 				It was <span class="timeoftheday"> 5:30</span> in the evening and the <b>sun</b> has set already set on the horizon, England is about 50° above the equator and experiences a temperate climate, it's common to see sunsets at early as 04:30 PM in the winter and as late as 10:30 PM in the summer. As I continue along the trail, I get a glimpse of a building, felt like close to civilization but it is only a factory&#59; on the walls are warning notices reading “ASBESTOS IS INJURIOUS TO HEALTH”. Asbestos used to be quite common back in my days of kindergarten when school roofs are made of grey asbestos and when it rained they used to turn green and slippery. Fortunately, the negative effects of asbestos are well known and now banned over 60 countries. Around 6:30 PM, around Middleton, a light flashed out of nowhere from a person almost 500 m ahead of me, it is not steady but oscillated a lot something that doesn’t happen when you hold it in our hands, the stranger ahead should be solo walker like me. With no intention of making a contact, I followed the light for 10 minutes and surprised to find that; the source of the light is a toddler shoe walking alongside his mother, they walk for few hundred metres and take a road to the left and disappear. I was not really sure why they are staying this late, either they live in a nearby village or have parked a car nearby.
 				</p>
-			<div class="image-banner">
-				<img src="images/The high peak trail.jpg">
-				<div class="banner-description">
-					<p>A gravel road in the area surrounding Buxon, the trail is on the left about 100 m from here</p>
+				<div class="images group">					
+				<div class="image-overflow">
+					<div class="image-banner image1">
+						<img src="images/The high peak trail.jpg">
+						<div class="banner-description">
+							<p>A gravel road in the area surrounding Buxon, the trail is on the left about 100 m from here</p>
+						</div>				
+					</div>
 				</div>
-				
-			</div>
-		
+				<div class="image-overflow">
+					<div class="image-banner image2">
+						<img src="images/para2_bg.jpg" alt="Image of a gravel trail">
+						<div class="banner-description">
+							<p>Somewhere along the high peak trail</p>
+						</div>	
+					</div>
+				</div>
+				</div>		
 				<p>
 				It was <span class="timeoftheday"> 5:30</span> in the evening and the sun has set already set on the horizon, England is about 50° above the equator and experiences a temperate climate, it's common to see sunsets at early as 04:30 PM in the winter and as late as 10:30 PM in the summer. As I continue along the trail, I get a glimpse of a building, felt like close to civilization but it is only a factory&#59; on the walls are warning notices reading “ASBESTOS IS INJURIOUS TO HEALTH”. Asbestos used to be quite common back in my days of kindergarten when school roofs are made of grey asbestos and when it rained they used to turn green and slippery. Fortunately, the negative effects of asbestos are well known and now banned over 60 countries. Around 6:30 PM, around Middleton, a light flashed out of nowhere from a person almost 500 m ahead of me, it is not steady but oscillated a lot something that doesn’t happen when you hold it in our hands, the stranger ahead should be solo walker like me. With no intention of making a contact, I followed the light for 10 minutes and surprised to find that; the source of the light is a toddler shoe walking alongside his mother, they walk for few hundred metres and take a road to the left and disappear. I was not really sure why they are staying this late, either they live in a nearby village or have parked a car nearby.
 				</p>
