Update to trave diary

--- a/travel-diary.html
+++ b/travel-diary.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Home Page - thinkingape46</title>
+	<title>Travel Diary - thinkingape46</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width initial-scale=1"> <!-- Web browser window area, the part of the browser that scrolls with the webpage [] -->
 	<link rel="stylesheet" href="css/travel-diary.css">
+	<link rel="stylesheet" href="css/lightbox.css">
 	<meta name="google-site-verification" content="hHcgob94hTfKzDqe_BTHVgxOSfAOJ9TVq0DSFCgbygQ" />
+	<script type="text/javascript" src="js/jquery.js"></script>
+	<script type="text/javascript" src="js/lightbox.min.js"></script>
 </head>
 <body>
 	
@@ -28,37 +31,34 @@
 	<div class="content-area group">
 	<div class="container">
 		<div class="para1">
-				<p>
-				It was <span class="timeoftheday"> 5:30</span> in the evening and the <b>sun</b> has set already set on the horizon, England is about 50° above the equator and experiences a temperate climate, it's common to see sunsets at early as 04:30 PM in the winter and as late as 10:30 PM in the summer. As I continue along the trail, I get a glimpse of a building, felt like close to civilization but it is only a factory&#59; on the walls are warning notices reading “ASBESTOS IS INJURIOUS TO HEALTH”. Asbestos used to be quite common back in my days of kindergarten when school roofs are made of grey asbestos and when it rained they used to turn green and slippery. Fortunately, the negative effects of asbestos are well known and now banned over 60 countries. Around 6:30 PM, around Middleton, a light flashed out of nowhere from a person almost 500 m ahead of me, it is not steady but oscillated a lot something that doesn’t happen when you hold it in our hands, the stranger ahead should be solo walker like me. With no intention of making a contact, I followed the light for 10 minutes and surprised to find that; the source of the light is a toddler shoe walking alongside his mother, they walk for few hundred metres and take a road to the left and disappear. I was not really sure why they are staying this late, either they live in a nearby village or have parked a car nearby.
-				</p>
-				<div class="images group">					
-				<div class="image-overflow">
-					<div class="image-banner image1">
-						<img src="images/The high peak trail.jpg">
-						<div class="banner-description">
-							<p>A gravel road in the area surrounding Buxon, the trail is on the left about 100 m from here</p>
-						</div>				
-					</div>
-				</div>
-				<div class="image-overflow">
-					<div class="image-banner image2">
-						<img src="images/para2_bg.jpg" alt="Image of a gravel trail">
-						<div class="banner-description">
-							<p>Somewhere along the high peak trail</p>
-						</div>	
-					</div>
-				</div>
-				</div>		
-				<p>
-				It was <span class="timeoftheday"> 5:30</span> in the evening and the sun has set already set on the horizon, England is about 50° above the equator and experiences a temperate climate, it's common to see sunsets at early as 04:30 PM in the winter and as late as 10:30 PM in the summer. As I continue along the trail, I get a glimpse of a building, felt like close to civilization but it is only a factory&#59; on the walls are warning notices reading “ASBESTOS IS INJURIOUS TO HEALTH”. Asbestos used to be quite common back in my days of kindergarten when school roofs are made of grey asbestos and when it rained they used to turn green and slippery. Fortunately, the negative effects of asbestos are well known and now banned over 60 countries. Around 6:30 PM, around Middleton, a light flashed out of nowhere from a person almost 500 m ahead of me, it is not steady but oscillated a lot something that doesn’t happen when you hold it in our hands, the stranger ahead should be solo walker like me. With no intention of making a contact, I followed the light for 10 minutes and surprised to find that; the source of the light is a toddler shoe walking alongside his mother, they walk for few hundred metres and take a road to the left and disappear. I was not really sure why they are staying this late, either they live in a nearby village or have parked a car nearby.
-				</p>
-			</div>
-			<div class="para2">
-				<p>
-				At 6:30 PM I had at least 4 more km to walk, it's pitch dark now with no lights in the vicinity. The time for the last bus from Cromford to Derby is fast approaching, and with no clue of what's ahead, I ramped the pace to buy some time. After half an hour, I reached a point where the road gets too steep (negative gradient of 12%), the trail is so steep that it takes more effort to walk than to run and I have a Mr. stranger now behind me on a bicycle. Cycling is a famous sport and well-supported through cycling infrastructure such are dedicated lanes, rental services, racks on trains, national cycling network and the company of 2.8 million riders. The government also encourages its citizens to get on a bike aims to make cycling and walking a natural choice for shorter journeys. I started running faster as if I saw him as a threat, it didn't take much time to overtake me and went on his path before uttered a British phrase “You Alright?”, I said, “I’m good, thank you”.
-				</p>
-			</div>
-	</div>	
+			<p>
+				Curabitur pretium tincidunt lacus. Nulla gravida orci a odio. Nullam varius, turpis et commodo pharetra, est eros bibendum elit, nec luctus magna felis sollicitudin mauris. Integer in mauris eu nibh euismod gravida. Duis ac tellus et risus vulputate vehicula. Donec lobortis risus a elit. Etiam tempor. Ut ullamcorper, ligula eu tempor congue, eros est euismod turpis, id tincidunt sapien risus a quam. Maecenas fermentum consequat mi. Donec fermentum. Pellentesque malesuada nulla a mi. Duis sapien sem, aliquet nec, commodo eget, consequat quis, neque. Aliquam faucibus, elit ut dictum aliquet, felis nisl adipiscing sapien, sed malesuada diam lacus eget erat. Cras mollis scelerisque nunc. Nullam arcu. Aliquam consequat. Curabitur augue lorem, dapibus quis, laoreet et, pretium ac, nisi. Aenean magna nisl, mollis quis, molestie eu, feugiat in, orci. In hac habitasse platea dictumst.
+			</p>
+		<div class="picture-grid thumbnails">
+		<div class="picture-text">
+			<div class="picture"><a href="https://4.bp.blogspot.com/-wDnTkLg6ScQ/Xp7ulOmA1AI/AAAAAAAAJsg/mW2S3PIB3NEzmcT1_mgDRMnho9jaU869QCLcBGAsYHQ/s1600/radcliffe-camera.jpg" data-lightbox="oxford-gallery" data-title="Radcliffe Camera, Oxford University"><img src="https://1.bp.blogspot.com/-1T4h3H4mwwE/Xp7ulF42riI/AAAAAAAAJsc/HhWwexvXQZEl56s1rGavd6i-hUxI9vmawCLcBGAsYHQ/s1600/radcliffe-camera-thumb.jpg" alt="Radcliffe Camera"></a></div>
+			<div class="text"></div>
+		</div>
+		<div class="picture-text">
+			<div class="picture"><a href="https://1.bp.blogspot.com/-VH1Hy13WhY0/Xp7wDFtJtEI/AAAAAAAAJs0/zQsax-OfpesBMS618LvJf70tYGfyat-ggCLcBGAsYHQ/s1600/Oxford-punting.jpg" data-lightbox="oxford-gallery" data-title="Punting in Oxford"><img src="https://2.bp.blogspot.com/-RK5T-e9Y0as/Xp7wC3vnVoI/AAAAAAAAJsw/w5Fm19jIeLMApJfPZ_jeVCEL5ZQxuKGZgCLcBGAsYHQ/s1600/Oxford-punting-thumb.jpg"></a></div>
+			<div class="text"></div>
+		</div>
+		<div class="picture-text">
+			<div class="picture"><a href="https://1.bp.blogspot.com/-afIp3nowk5I/Xp7x45AseZI/AAAAAAAAJtQ/Z__QVeD24rcz_t_lAm9iLTV8fN93pxG7ACLcBGAsYHQ/s1600/oxford-balliol-college.jpg" data-lightbox="oxford-gallery" data-title="Sundial at Balliol College, Oxford University"><img src="https://2.bp.blogspot.com/-eCPhUHLbUA4/Xp7x3YibBjI/AAAAAAAAJtI/QgKrRx0G5OshHXHB2bI-EByA2K59AmXjgCLcBGAsYHQ/s1600/oxford-balliol-college-thumb.jpg"></a></div>
+			<div class="text"></div>
+		</div>
+		<div class="picture-text">
+			<div class="picture"><a href="https://4.bp.blogspot.com/-4iJ6DhNTP80/Xp7x3fvH-6I/AAAAAAAAJtM/YV50lvNZ5o8x7NOvhSKgEDCYITjv6bqFQCLcBGAsYHQ/s1600/Oxford-natural-history.jpg" data-lightbox="oxford-gallery" data-title="Museum of Natural Hisory, Oxford University"><img src="https://2.bp.blogspot.com/-S0PmHT70xS4/Xp7x3SBmOYI/AAAAAAAAJtE/xuu6nnJ8fm0Q8zZcnxbs1o1G89pJpppnwCLcBGAsYHQ/s1600/Oxford-natural-history-thumb.jpg"></a></div>
+			<div class="text"></div>
+		</div>
+		</div>		
+		</div>
+		<div class="para2">
+			<p>
+					Images here.
+			</p>
+		</div>	
+	</div>
 	</div>
 	<div class="non-mobile">
 		<p>This box is invisible on screen width less than 480 pixels.</p>
