--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <header>
 	<div class="container">
 		<h1>Welcome to my Website</h1>
-		<p class="slogan">I have written this website to practise my skills as a web developer, this site is hosted by github at this <a href="https://github.com/thinkingape46/thinkingape46.github.io">page</a>.</p>
+		<p class="slogan">Updated dialy, almost! this site is hosted by github at this <a href="https://github.com/thinkingape46/thinkingape46.github.io">page</a>.</p>
 	<nav class="site-nav">
 	<ul class="group">
 		<li class="size-scale"><a href="index.html">Home Page</a></li>
@@ -29,7 +29,11 @@
 	<div class="container">
 		<div class="para1">
 				<p>
-				It was <span class="timeoftheday"> 5:30</span> in the evening and the <b>sun</b> has set already set on the horizon, England is about 50° above the equator and experiences a temperate climate, it's common to see sunsets at early as 04:30 PM in the winter and as late as 10:30 PM in the summer. As I continue along the trail, I get a glimpse of a building, felt like close to civilization but it is only a factory&#59; on the walls are warning notices reading “ASBESTOS IS INJURIOUS TO HEALTH”. Asbestos used to be quite common back in my days of kindergarten when school roofs are made of grey asbestos and when it rained they used to turn green and slippery. Fortunately, the negative effects of asbestos are well known and now banned over 60 countries. Around 6:30 PM, around Middleton, a light flashed out of nowhere from a person almost 500 m ahead of me, it is not steady but oscillated a lot something that doesn’t happen when you hold it in our hands, the stranger ahead should be solo walker like me. With no intention of making a contact, I followed the light for 10 minutes and surprised to find that; the source of the light is a toddler shoe walking alongside his mother, they walk for few hundred metres and take a road to the left and disappear. I was not really sure why they are staying this late, either they live in a nearby village or have parked a car nearby.
+					Hello! Welcome again.
+					<br></br>
+					This is Jagadeesh Kumar, working on this website basically to showcase my skills in web development with my personal stories as a filler.
+					<br></br>
+					
 				</p>
 				<div class="images group">					
 				<div class="image-overflow">
@@ -61,7 +65,7 @@
 	</div>	
 	</div>
 	<div class="non-mobile">
-		<p>This box is invisible on screen width less than 480 pixels.</p>
+		<p>&copy; thinkingape46.</p>
 	</div>	
 </body>
 </html>
