--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 	
 <header>
 	<div class="container">
-		<h1>Welcome to my Website</h1>
-		<p class="slogan">Updated dialy, almost! this site is hosted by github at this <a href="https://github.com/thinkingape46/thinkingape46.github.io">page</a>.</p>
+		<h1>Welcome!</h1>
+		<p class="slogan">Site is hosted by github.>page</a>.</p>
 	<nav class="site-nav">
 	<ul class="group">
 		<li class="size-scale"><a href="index.html">Home Page</a></li>
