--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <header>
 	<div class="container">
 		<h1>Welcome!</h1>
-		<p class="slogan">Site is hosted by github.>page</a>.</p>
+		<p class="slogan">Site is hosted by github.</p>
 	<nav class="site-nav">
 	<ul class="group">
 		<li class="size-scale"><a href="index.html">Home Page</a></li>
