--- a/index.html
+++ b/index.html
@@ -27,11 +27,10 @@
 </header>
 	<div class="content-area group">
 	<div class="container">
-		<div class="para1">
 				<p>
 					Hello! Welcome again.
 					<br></br>
-					This is Jagadeesh Kumar, working on this website basically to showcase my skills in web development with my personal stories as a filler.
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 					<br></br>
 					
 				</p>
@@ -54,14 +53,8 @@
 				</div>
 				</div>		
 				<p>
-				It was <span class="timeoftheday"> 5:30</span> in the evening and the sun has set already set on the horizon, England is about 50° above the equator and experiences a temperate climate, it's common to see sunsets at early as 04:30 PM in the winter and as late as 10:30 PM in the summer. As I continue along the trail, I get a glimpse of a building, felt like close to civilization but it is only a factory&#59; on the walls are warning notices reading “ASBESTOS IS INJURIOUS TO HEALTH”. Asbestos used to be quite common back in my days of kindergarten when school roofs are made of grey asbestos and when it rained they used to turn green and slippery. Fortunately, the negative effects of asbestos are well known and now banned over 60 countries. Around 6:30 PM, around Middleton, a light flashed out of nowhere from a person almost 500 m ahead of me, it is not steady but oscillated a lot something that doesn’t happen when you hold it in our hands, the stranger ahead should be solo walker like me. With no intention of making a contact, I followed the light for 10 minutes and surprised to find that; the source of the light is a toddler shoe walking alongside his mother, they walk for few hundred metres and take a road to the left and disappear. I was not really sure why they are staying this late, either they live in a nearby village or have parked a car nearby.
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 				</p>
-			</div>
-			<div class="para2">
-				<p>
-				At 6:30 PM I had at least 4 more km to walk, it's pitch dark now with no lights in the vicinity. The time for the last bus from Cromford to Derby is fast approaching, and with no clue of what's ahead, I ramped the pace to buy some time. After half an hour, I reached a point where the road gets too steep (negative gradient of 12%), the trail is so steep that it takes more effort to walk than to run and I have a Mr. stranger now behind me on a bicycle. Cycling is a famous sport and well-supported through cycling infrastructure such are dedicated lanes, rental services, racks on trains, national cycling network and the company of 2.8 million riders. The government also encourages its citizens to get on a bike aims to make cycling and walking a natural choice for shorter journeys. I started running faster as if I saw him as a threat, it didn't take much time to overtake me and went on his path before uttered a British phrase “You Alright?”, I said, “I’m good, thank you”.
-				</p>
-			</div>
 	</div>	
 	</div>
 	<div class="non-mobile">
