--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 	
 <header>
 	<div class="container">
-		<h1>Welcome!</h1>
-		<p class="slogan">Site is hosted by github.</p>
+		<h1>thinkingape46</h1>
+		<p class="slogan">This site is hosted by github.</p>
 	<nav class="site-nav">
 	<ul class="group">
 		<li class="size-scale"><a href="index.html">Home Page</a></li>
@@ -28,11 +28,10 @@
 	<div class="content-area group">
 	<div class="container">
 				<p>
-					Hello! Welcome again.
-					<br></br>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-					<br></br>
-					
+					<h3>Welcome! whoever you are and wherever you are from.</h3>
+					<br>
+					The pages on this website are written by a person who is quite a begineer in what he is doing. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					<br>					
 				</p>
 				<div class="images group">					
 				<div class="image-overflow">
@@ -57,8 +56,11 @@
 				</p>
 	</div>	
 	</div>
-	<div class="non-mobile">
-		<p>&copy; thinkingape46.</p>
-	</div>	
+	<footer>
+		<div class="non-mobile">
+			<p>Page currently written in HTML5 and CSS3 &copy; thinkingape46.</p>
+		</div>
+	</footer>
+	
 </body>
 </html>
