Created a new home page.

--- a/index.html
+++ b/index.html
@@ -1,49 +1,32 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Home Page - thinkingape46</title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width initial-scale=1"> <!-- Web browser window area, the part of the browser that scrolls with the webpage [] -->
-	<link rel="stylesheet" href="css/index.css">
-	<meta name="google-site-verification" content="hHcgob94hTfKzDqe_BTHVgxOSfAOJ9TVq0DSFCgbygQ" />
-</head>
-<body>
-	
-<header>
-	<div class="container">
-		<h1>thinkingape46</h1>
-		<p class="slogan">This site is hosted by github.</p>
-	<nav class="site-nav">
-	<ul class="group">
-		<li class="size-scale"><a href="index.html">Home Page</a></li>
-		<li class="size-scale"><a href="#">Portfolio</a></li>
-		<li class="size-scale"><a href="travel-diary.html">Travel Diary</a></li>
-		<li class="size-scale"><a href="#">Science Blog</a></li>
-		<li class="size-scale"><a href="miscellaneous.html">Miscellaneous</a></li>
-		<li class="size-scale"><a href="aboutme.html">About Me</a></li>
-	</ul>
-	</nav>
-	</div>
-</header>
-	<div class="content-area group">
-	<div class="container">
-				<p>
-					<h3>Welcome! whoever you are and wherever you are from.</h3>
-					<br>
-					The pages on this website are written by a person who is quite a begineer in what he is doing. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-					<br>					
-				</p>
-	
-				<p>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-				</p>
-	</div>	
-	</div>
-	<footer>
-		<div class="non-mobile">
-			<p>Page currently written in HTML5 and CSS3 &copy; thinkingape46.</p>
+	<head>
+		<meta charset="utf-8">
+		<title>Home Page - Thinkingape46</title>
+		<link rel="stylesheet" href="css/index.css">
+		<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap" rel="stylesheet">
+	</head>
+	<body>
+
+		<div class="container">
+			<header>
+				<h1>Thinkingape46</h1>
+			</header>
+			<nav class="siteNav">
+				<ul>
+					<li><a href="#">Home</a></li>
+					<li><a href="#">Code</a></li>
+					<li><a href="#">Blog</a></li>
+					<li><a href="#">Arts</a></li>
+					<li><a href="#">Sports</a></li>
+					<li><a href="#">About Me</a></li>
+				</ul>
+			</nav>
+			<div class="content">
+				<h1>Hello! Welcome to my page!</h1>
+
+			</div>
+
 		</div>
-	</footer>
-	
-</body>
+	</body>
 </html>
