Add a project (Spectrum V)

--- a/index.html
+++ b/index.html
@@ -23,7 +23,14 @@
 				</ul>
 			</nav>
 			<div class="content">
-				<h1>Hello! Welcome to my page!</h1>
+				<h1>Hello! Welcome to my page</h1>
+				<p>Here are some of the tiny bits I am involved with...</p>
+				<div class="thumbnails">
+					<div class="spectrumV">
+						<a href="projects/spectrumV/em_spectrum.html"><img src="projects/spectrumV/spectrumVthumb.png" alt="spectrumV_project"></a>
+						<p class="spectrumVDescription">Spectrum V</p>
+					</div>
+				</div>
 
 			</div>
 
