--- a/projects/spectrumV/em_spectrum.html
+++ b/projects/spectrumV/em_spectrum.html
@@ -4,8 +4,9 @@
         <meta charset="utf-8">
         <title>Spectrum V</title>
         <link rel="stylesheet" href="em_spectrum.css">
-        <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="../../css/index.css">
+        <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap" rel="stylesheet">
     </head>
     <body>
 
