updates to webpages, see description.
index.html --> home page link added in navbar
                  --> thumbnail added.
em_spectrum.css --> height of bars increased.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			</header>
 			<nav class="siteNav">
 				<ul>
-					<li><a href="#">Home</a></li>
+					<li><a href="index.html">Home</a></li>
 					<li><a href="#">Code</a></li>
 					<li><a href="#">Blog</a></li>
 					<li><a href="#">Arts</a></li>
