--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<title>Home Page - Thinkingape46</title>
 		<link rel="stylesheet" href="css/index.css">
 		<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap" rel="stylesheet">
+		<meta name="google-site-verification" content="hHcgob94hTfKzDqe_BTHVgxOSfAOJ9TVq0DSFCgbygQ" />
 	</head>
 	<body>
 
