pig game page updated.

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
 						<a href="projects/spectrumV/em_spectrum.html"><img src="projects/spectrumV/spectrumVthumb.png" alt="spectrumV_project"></a>
 						<p class="spectrumVDescription">Spectrum V</p>
 					</div>
+					<div class="pig-game">
+						<a href="projects/pig_game/pig_game.html"><img src="projects/pig_game/images/baby_pig.png" alt="pig game project"></a>
+					</div>
 				</div>
 
 			</div>
