--- a/projects/pig_game/pig_game.html
+++ b/projects/pig_game/pig_game.html
@@ -7,6 +7,22 @@
     <link rel="stylesheet" href="pig_game.css">
 </head>
 <body>
+
+    <div class="container">
+        <header>
+            <h1>Thinkingape46</h1>
+        </header>
+        <nav class="siteNav">
+            <ul>
+                <li><a href="../../index.html">Home</a></li>
+                <li><a href="#">Code</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Arts</a></li>
+                <li><a href="#">Sports</a></li>
+                <li><a href="#">About Me</a></li>
+            </ul>
+        </nav>
+
     <div class="box">
 
         <div class="players playerOne">
