update to home page

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 				<h1>Hello! Welcome to my page</h1>
 				<p>Here are some of the tiny bits I am involved with...</p>
 				<div class="thumbnails">
-					<div class="spectrumV">
+					<div class="thumbnail-object spectrumV">
 						<a href="projects/spectrumV/em_spectrum.html"><img src="projects/spectrumV/spectrumVthumb.png" alt="spectrumV_project"></a>
-						<p class="spectrumVDescription">Spectrum V</p>
+						<div class="thumbnail-description">Spectrum V</div>
 					</div>
-					<div class="pig-game">
+					<div class="thumbnail-object pig-game">
 						<a href="projects/pig_game/pig_game.html"><img src="projects/pig_game/images/baby_pig.png" alt="pig game project"></a>
 					</div>
 				</div>
