--- a/projects/pig_game/pig_game.html
+++ b/projects/pig_game/pig_game.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pig Game</title>
     <link rel="stylesheet" href="pig_game.css">
+    <link rel="stylesheet" href="../../css/index.css">
 </head>
 <body>
 
@@ -22,7 +23,7 @@
                 <li><a href="#">About Me</a></li>
             </ul>
         </nav>
-
+    
     <div class="box">
 
         <div class="players playerOne">
@@ -69,10 +70,12 @@
             <p>1</p>
             <p>1</p>
         </div>
+        <div>
+            <p id="player-one-label">PLAYER ONE</p>
+            <p id="player-two-label">PLAYER TWO</p>
+        </div>
     </div>
-    <div>
-        <p id="player-one-label">PLAYER ONE</p>
-        <p id="player-two-label">PLAYER TWO</p>
+
     </div>
 
     <script src="pig_game.js"></script>
