--- a/projects/pig_game/pig_game.html
+++ b/projects/pig_game/pig_game.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pig Game</title>
-    <link rel="stylesheet" href="pig_game.css">
     <link rel="stylesheet" href="../../css/index.css">
+    <link rel="stylesheet" href="pig_game.css">
 </head>
 <body>
 
@@ -23,13 +23,14 @@
                 <li><a href="#">About Me</a></li>
             </ul>
         </nav>
-    
+    <div class="content">
     <div class="box">
 
         <div class="players playerOne">
             <div class="score-box">
                 <p class="score-label">TOTAL</p>
                 <p id="score-num-one">0</p>
+                <p id="player-one-label">PLAYER ONE</p>
             </div>
             <div class="score-box-round">                
                 <p id="score-num-round-one">0</p>
@@ -40,6 +41,7 @@
             <div class="score-box">
                 <p class="score-label">TOTAL</p>
                 <p id="score-num-two">0</p>
+                <p id="player-two-label">PLAYER TWO</p>
             </div>
             <div class="score-box-round">                
                 <p id="score-num-round-two">0</p>
@@ -70,12 +72,9 @@
             <p>1</p>
             <p>1</p>
         </div>
-        <div>
-            <p id="player-one-label">PLAYER ONE</p>
-            <p id="player-two-label">PLAYER TWO</p>
-        </div>
+        
     </div>
-
+    </div>
     </div>
 
     <script src="pig_game.js"></script>
