pig game styling update for 480p screens.

--- a/projects/pig_game/pig_game.html
+++ b/projects/pig_game/pig_game.html
@@ -2,13 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pig Game</title>
     <link rel="stylesheet" href="../../css/index.css">
     <link rel="stylesheet" href="pig_game.css">
 </head>
 <body>
-
     <div class="container">
         <header>
             <h1>Thinkingape46</h1>
@@ -53,20 +52,20 @@
                 <button type="button" class="button-roll-hold" id="player-two-hold"><a href="#">HOLD</a></button>
             </div>
         </div>
-
+        
+        <div id="center-section">
         <div id="dice-image">
             <img id="dice" src="images/baby_pig.png" alt="dice">
         </div>
         <div>
             <a class="button-start-stop" id="button-start-stop" href="#">START</a>
         </div>
-
+        </div>
         <div id="game-end">
             <p>1</p>
             <p>1</p>
             <p>1</p>
-        </div>
-        
+        </div>        
     </div>
     </div>
     </div>
