--- a/projects/pig_game/pig_game.html
+++ b/projects/pig_game/pig_game.html
@@ -6,6 +6,7 @@
     <title>Pig Game</title>
     <link rel="stylesheet" href="../../css/index.css">
     <link rel="stylesheet" href="pig_game.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -44,7 +45,7 @@
                     <p id="score-num-round-one">0</p>
                 </div>
                 <div id="dice-image" class="dice-image">
-                    <img id="dice" src="images/baby_pig.png" alt="dice">
+                    <p><img id="dice" src="images/baby_pig.png" alt="dice"></p>
                 </div>
                 <div class="round-score-two">                
                     <p id="score-num-round-two">0</p>
