--- a/projects/pig_game/pig_game.html
+++ b/projects/pig_game/pig_game.html
@@ -33,9 +33,10 @@
                     <p id="player-one-label">PLAYER ONE</p>
                 </div>
                 <div id="game-end" class="game-end">
-                    <p>1</p>
-                    <p>1</p>
-                    <p>1</p>
+                    <p id="line-one">1</p>
+                    <p id="line-two">1</p>
+                    <p id="line-three">1</p>
+                    <p id="close-pop" class="close-pop">close</p>                    
                 </div>
                 <div class="score-box-two">
                     <p id="score-num-two">0</p>
@@ -70,9 +71,7 @@
                     <button type="button" class="button-roll-hold" id="player-two-roll"><a href="#">ROLL</a></button>
                     <button type="button" class="button-roll-hold" id="player-two-hold"><a href="#">HOLD</a></button>
                 </div>
-            </div>    
-        </div>
-    </div>
+            </div>
     <script src="pig_game.js"></script>
 </body>
 </html>
